--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="uz">
 <head>
   <meta charset="UTF-8">
@@ -8,23 +8,55 @@
 </head>
 <body class="bg-blue-950">
 
-    <header class="flex justify-between items-center p-5 shadow-md">
-      <div class="text-2xl font-bold text-blue-800">
-        Perfect IT Center
-    </div>
-        <nav>
-          <ul class="flex space-x-6">
-            <li><a href="index.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600">Home</a></li>
-            <li><a href="about.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600">About Us</a></li>
-            <li><a href="courses.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600">Courses</a></li>
-            <li><a href="contact.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600">Contact Us</a></li>
-            <li><a href="login.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600">Log in</a></li>
-            <li><a href="signin.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600">Sign in</a></li>
-          </ul>
-        </nav>
-      </header> 
+  <header class="flex justify-between items-center p-5 shadow-md">
+    <div class="text-2xl font-bold text-blue-800">
+      Perfect IT Center
+  </div>
+    <nav>
+      <ul class="flex space-x-6">
+        <li><a href="index.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600"></a></li>
+        <li><a href="about.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600">About Us</a></li>
+        <li><a href="courses.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600">Courses</a></li>
+        <li><a href="contact.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600">Contact Us</a></li>
+        <li><a href="login.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600">Log in</a></li>
+        <li><a href="signin.html" class="text-gray-600 px-4 text-white text-lg hover:text-lime-600">Sign in</a></li>
+      </ul>
+    </nav>
+  </header> 
+  
+  <div class="bg-cover bg-center  h-[60vh]" style="background-image: url('https://files.oaiusercontent.com/file-ViPXo6pwXknyyrXJKsSQdN?se=2025-02-13T15%3A34%3A41Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Daa406ec9-40a5-4ae8-9f07-2ec312cdb009.webp&sig=kaRcrRW1BwP6r%2B5r0HrQxss07SHkoYNOiZdio1F6d%2BM%3D');">
+   <div class="flex justify-center items-center h-[inherit] bg-[#0000005d]">
+    <h1 class="text-4xl md:text-6xl font-bold text-white pb-4 border-b-4 border-red-500 z-20"><p class="whitespace-pre-wrap" style=""><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">P</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">e</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">r</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">f</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">e</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">c</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">t</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;"> </span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">I</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">T</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;"> </span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">C</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">e</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">n</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">t</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">e</span><span class="inline-block whitespace-pre" style="opacity: 1; filter: blur(0px); transform: none;">r</span></p></h1>
+   </div>
+  </div>
 
-      
+
+
+  <div class="flex justify-center items-center h-20  fixed w-full bottom-0">
+    <div class="flex space-x-4">
+      <!-- Telegram -->
+      <a href="https://t.me/perfectitcenter" target="_blank" class="text-white hover:text-blue-400">
+        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 0C5.37 0 0 5.37 0 12c0 6.63 5.37 12 12 12 6.63 0 12-5.37 12-12C24 5.37 18.63 0 12 0zm4.75 8.63l-1.13 5.38c-.09.41-.3.55-.65.34l-1.8-1.33-1.17 1.13c-.13.13-.25.25-.5.25l.18-2.56 4.64-4.19c.2-.17-.05-.27-.3-.1l-5.75 3.62-2.48-.78c-.4-.13-.41-.4.08-.59l9.7-3.75c.38-.15.72.09.6.58z"/>
+        </svg>
+      </a>
+
+      <!-- Instagram -->
+      <a href="https://www.instagram.com/pic_urgench" target="_blank" class="text-white hover:text-pink-500">
+        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 2.16c3.2 0 3.58.01 4.85.07 1.17.05 1.91.24 2.35.41a4.6 4.6 0 0 1 1.66 1.08c.49.49.86 1.08 1.08 1.66.17.44.36 1.18.41 2.35.06 1.27.07 1.65.07 4.85s-.01 3.58-.07 4.85c-.05 1.17-.24 1.91-.41 2.35a4.6 4.6 0 0 1-1.08 1.66c-.49.49-1.08.86-1.66 1.08-.44.17-1.18.36-2.35.41-1.27.06-1.65.07-4.85.07s-3.58-.01-4.85-.07c-1.17-.05-1.91-.24-2.35-.41a4.6 4.6 0 0 1-1.66-1.08 4.6 4.6 0 0 1-1.08-1.66c-.17-.44-.36-1.18-.41-2.35-.06-1.27-.07-1.65-.07-4.85s.01-3.58.07-4.85c.05-1.17.24-1.91.41-2.35.21-.58.59-1.17 1.08-1.66.49-.49 1.08-.86 1.66-1.08.44-.17 1.18-.36 2.35-.41 1.27-.06 1.65-.07 4.85-.07zm0-2.16C8.65 0 8.24.01 6.95.06 5.63.11 4.65.3 3.87.58a6.77 6.77 0 0 0-2.45 1.61 6.77 6.77 0 0 0-1.61 2.45c-.28.78-.47 1.76-.52 3.08C.01 8.24 0 8.65 0 12s.01 3.76.06 5.05c.05 1.32.24 2.3.52 3.08.39 1.16 1.02 2.23 1.61 2.82.59.59 1.66 1.22 2.82 1.61.78.28 1.76.47 3.08.52 1.29.05 1.7.06 5.05.06s3.76-.01 5.05-.06c1.32-.05 2.3-.24 3.08-.52 1.16-.39 2.23-1.02 2.82-1.61.59-.59 1.22-1.66 1.61-2.82.28-.78.47-1.76.52-3.08.05-1.29.06-1.7.06-5.05s-.01-3.76-.06-5.05c-.05-1.32-.24-2.3-.52-3.08a6.77 6.77 0 0 0-1.61-2.45 6.77 6.77 0 0 0-2.45-1.61c-.78-.28-1.76-.47-3.08-.52C15.76.01 15.35 0 12 0zm0 5.84a6.16 6.16 0 1 0 0 12.32 6.16 6.16 0 0 0 0-12.32zm0 10.16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.4-10.75a1.44 1.44 0 1 0 0-2.88 1.44 1.44 0 0 0 0 2.88z"/>
+        </svg>
+      </a>
+
+      <!-- YouTube -->
+      <a href="https://www.youtube.com/@PIC-Urganch" target="_blank" class="text-white hover:text-red-500">
+        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M23.5 6.2c-.3-1.3-1.4-2.3-2.7-2.5C18.4 3.3 12 3.3 12 3.3s-6.4 0-8.8.4c-1.3.2-2.4 1.2-2.7 2.5C0 8.7 0 12 0 12s0 3.3.5 5.8c.3 1.3 1.4 2.3 2.7 2.5 2.4.4 8.8.4 8.8.4s6.4 0 8.8-.4c1.3-.2 2.4-1.2 2.7-2.5.5-2.5.5-5.8.5-5.8s0-3.3-.5-5.8zM9.5 15.5v-7l6.5 3.5-6.5 3.5z"/>
+        </svg>
+      </a>
+    </div>
+</div>
 
 
 </body>
+</html>
