--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Perfect IT Center</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-blue-950">
+<body class="p-4 lg:p-8 bg-blue-950">
 
   <header class="flex justify-between items-center p-5 shadow-md">
     <div class="text-2xl font-bold text-blue-800">
